--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ script:
 before_install:
   - openssl aes-256-cbc -K $encrypted_1b02f153377c_key -iv $encrypted_1b02f153377c_iv
     -in deploy_key.enc -out deploy_key -d
+  - chmod 400 deploy_key
 env:
   - GIT_SSH_COMMAND="ssh -i deploy_key"
 deploy:
