--- a/_config.yaml
+++ b/_config.yaml
@@ -1,5 +1,5 @@
 title: Our example Helm chart repo
-description: A chart repo for storing charts.
+description: An example chart repo for storing charts. See the accompanying [blog post](https://www.jacobtomlinson.co.uk/posts/2019/how-to-create-a-helm-chart-repository-with-chartpress-travis-ci-github-pages-and-jekyll/) for more information.
 theme: minima
 url: "https://helm-repo-example.jacobtomlinson.dev/"
 repo_name: helm-repo-example
